@@ -177,27 +177,7 @@ varline ::= key(A) APPEND expression(B). {
           ctx->current->context_ndx,
           ctx->current->key->ptr, A->ptr);
       ctx->ok = 0;
-    } else if (NULL != (du = array_get_element(vars, A->ptr))) {
-      /* exists in current block */
-      if (du->type != B->type) {
-        /* might create new data when merging different types; need to replace old array entry */
-        /* also merging will kill the old data */
-        du = du->copy(du);
-        du = configparser_merge_data(du, B);
-        if (NULL != du) {
-          buffer_copy_buffer(du->key, A);
-          array_replace(vars, du);
-        }
-      } else {
-        data_unset *old_du = du;
-        du = configparser_merge_data(old_du, B);
-        force_assert((NULL == du) || (du == old_du)); /* must not create new data when types match */
-      }
-      if (NULL == du) {
-        ctx->ok = 0;
-      }
-      B->free(B);
-    } else if (NULL != (du = configparser_get_variable(ctx, A))) {
+    } else if (NULL != (du = array_extract_element(vars, A->ptr)) || NULL != (du = configparser_get_variable(ctx, A))) {
       du = configparser_merge_data(du, B);
       if (NULL == du) {
         ctx->ok = 0;
